@@ -2,7 +2,7 @@
  OmegaT 2.6.3 update 5
 ----------------------------------------------------------------------
    0 Enhancement
-   3 Bug fixes
+   4 Bug fixes
    0 Localisation update
 ----------------------------------------------------------------------
 2.6.3 update 5 vs. 2.6.3 update 4
@@ -17,6 +17,9 @@
 
   - tm/auto folder is created in wrong location
   https://sourceforge.net/p/omegat/bugs/553/
+
+  - If project location properties changed to blank, OmegaT freezes after reloading project 
+  https://sourceforge.net/p/omegat/bugs/632/
 
 ----------------------------------------------------------------------
  OmegaT 2.6.3 update 4
